# CodeBuilder

./: README.md
codebuilder/: __init__.py  cli.py  pyproject.toml
codebuilder/languages/: c.py  cpp.py  csharp.py  go.py  java.py  python.py  rust.py
codebuilder/utils/: __init__.py  detector.py  github_fetcher.py  logger.py
